# gitup

./: .gitignore  Cargo.toml  README.md
daemon/: Cargo.toml  config-schema.json  sample-config.json
daemon/src/: base64.rs  byte_size.rs  configuration.rs  hash.rs  main.rs  padding.rs  web_client.rs
daemon/src/backup/: archive.rs  cleanup.rs  compression.rs  encrypt.rs  errors.rs  estimate.rs  file.rs  mod.rs  snapshot.rs  structures.rs  upload.rs  upload_checks.rs  utility.rs
daemon/src/restore/: mod.rs  recover_and_verify.rs  utility.rs
daemon/src/storage_providers/: github.rs  mod.rs  provider.rs
gui/: package-lock.json
gui/src-tauri/: tauri.conf.json
installer/: package-lock.json  package.json
installer/src-tauri/: Cargo.toml  tauri.conf.json
