[package]
name = "daemon"
authors.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
readme.workspace = true

[profile.release]
codegen-units = 1
debug = false
lto = true
debug-assertions = false
incremental = true
opt-level = 3

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
reqwest = { version = "0.12.12", features = ["json", "multipart"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135" }
optional_struct = { version = "0.5.2" }
regex = { version = "1.11.1" }
futures = { version = "0.3.31" }
async-trait = { version = "0.1.85" }
rmp-serde = { version = "1.3.0" }
glob = { version = "0.3.2" }
sha3 = { version = "0.10.8" }
zip = { version = "2.2.2", default-features = false }
flate2 = { version = "1.0.35", default-features = false, features = ["zlib-ng"] }
cuid2 = { version = "0.1.3" }
chacha20poly1305 = { version = "0.10.1" }
hkdf = { version = "0.12.4" }
once_cell = { version = "1.20.2" }

[lints]
workspace = true
